# Seven

./: .clang-format  .dockerignore  .gitignore  .gitignore_new  ARCHITECTURE.md  CACHE_SYSTEM.md  CMakeLists.txt  CODING_STANDARDS_APPLIED.md  CONSTRUCTOR_REFACTORING_COMPLETE.md  Dockerfile  Dockerfile.alternative  Dockerfile.clean  Dockerfile.minimal  Dockerfile.nats-test  Dockerfile.production  Dockerfile.simple  Dockerfile.test  Dockerfile.windows  GRAFANA_SETUP.md  IMPLEMENTATION_SUMMARY.md  PERFORMANCE_GUIDE.md  PERMANENT_PERFORMANCE_DEMO_SUMMARY.md  PERMANENT_TASK_SYSTEM_COMPLETE.md  PORTFOLIO_CALLBACK_REMOVAL_EXPLANATION.md  PROJECT_STATUS.md  README.md  README_UPDATE_SUMMARY.md  SANITIZERS.md  SERVICEHOST_CACHE_SYSTEM.md  SIMPLIFIED_REGISTRATION_COMPLETE.md  UNIFIED_INITIALIZATION_COMPLETE.md  build-windows.bat  build-windows.ps1  build_local.sh  cache_demo.cpp  cache_integration_demo.cpp  config.yaml  docker-compose.dev.yml  docker-compose.override.yml  docker-compose.yml  (+14 more)
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml
config/: otel-collector-config.yaml
config/grafana/dashboards/: servicehost-dashboard.json  system-overview.json
config/grafana/plugins/grafana-metricsdrilldown-app/: MANIFEST.txt
config/grafana/provisioning/dashboards/: dashboards.yml
config/grafana/provisioning/datasources/: prometheus.yml
docs/: ASYNC_STARTUP_GUIDE.md  COMPOSITION_VS_INHERITANCE.md  SERVICE_INITIALIZATION.md  SIMPLIFIED_REGISTRATION.md  START_SERVICE.md  ServiceScheduler.md
examples/: scheduler_example.cpp  service_initialization_example.cpp
libs/common/: CMakeLists.txt  cache_manager.hpp  cached_portfolio_manager.hpp  configuration.hpp  configuration_simple.hpp  logger.cpp  logger.hpp  lru_cache.hpp  messages_register.hpp  metrics_server.hpp  opentelemetry_integration.cpp  opentelemetry_integration.hpp  opentelemetry_stubs.hpp  prometheus_metrics.hpp  service_cache.cpp  service_cache.hpp  service_host.hpp  service_host_impl.cpp  service_scheduler.cpp  service_scheduler.hpp  seven_lru_cache.hpp  thread_pool.hpp  tl_lru_cache.hpp
proto/: generate_proto.sh  messages.proto
scripts/: build-release.sh  build-sanitizers.sh  build-tsan.sh  build.sh  clean.sh  docker_build.bat  docker_build_simple.ps1  docker_build_up.sh  docker_build_windows.ps1  docker_down.sh  docker_rebuild.ps1   docker_rebuild.sh  format.sh  quick_docker_build.bat  rebuild.sh  test-threadpool.sh  test.sh  view_traces.sh
services/portfolio_manager/: CMakeLists.txt  Dockerfile  main.cpp  portfolio_manager.hpp
services/python_client/: Dockerfile  config.yaml  healthcheck_client.py  messages_pb2.py  test_portfolio_client.py
tests/: CMakeLists.txt  README_THREADPOOL.md  test_cache_integration.cpp  test_graceful_shutdown.cpp  test_lru_cache.cpp  test_service_host.cpp  test_service_host_cache.cpp  test_thread_pool.cpp  test_thread_pool_integration.cpp  test_thread_pool_sanitizers.cpp
